syntax = "proto3";

message CheckboxTypeOption {
    bool is_selected = 1;
}
