syntax = "proto3";

message RichTextTypeOption {
    string format = 1;
}
